<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ozaltun.mynotesapp.fragments.HomeFragment"
        android:label="@string/homePage"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_createFragment"
            app:destination="@id/createFragment" />
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/createFragment"
        android:name="com.ozaltun.mynotesapp.fragments.CreateFragment"
        android:label="@string/createPage"
        tools:layout="@layout/fragment_create">
        <action
            android:id="@+id/action_createFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.ozaltun.mynotesapp.fragments.DetailFragment"
        android:label="@string/editPage"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_detailFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <argument
            android:name="data"
            app:argType="com.ozaltun.mynotesapp.model.Notes" />
    </fragment>
</navigation>