<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_custom"
            android:ems="10"
            android:fontFamily="@font/bold"
            android:gravity="start"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtNotes"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_custom"
            android:ems="10"
            android:fontFamily="@font/medium"
            android:gravity="start"
            android:hint="@string/typeNote"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pYellow" />

        <TextView
            android:id="@+id/pYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/txt_fiter_yellow"
            android:fontFamily="@font/bold"
            android:padding="10dp"
            android:text="@string/pMedium"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/pGreen"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pRed"
            app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

        <TextView
            android:id="@+id/pGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/txt_fiter_green"
            android:fontFamily="@font/bold"
            android:padding="10dp"
            android:text="@string/pLow"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pYellow"
            app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

        <TextView
            android:id="@+id/pRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/txt_fiter_red"
            android:fontFamily="@font/bold"
            android:padding="10dp"
            android:text="@string/pHigh"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/pYellow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTitle" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSaveNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@drawable/done_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>