<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/allNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/txt_filter_shape"
            android:fontFamily="@font/bold"
            android:padding="10dp"
            android:text="@string/allNotes"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/filterHigh"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filterLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/txt_filter_shape"
            android:fontFamily="@font/bold"
            android:padding="10dp"
            android:text="@string/pLow"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/filterMedium"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filterMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/txt_filter_shape"
            android:fontFamily="@font/bold"
            android:padding="10dp"
            android:text="@string/pMedium"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/filterLow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/filterHigh"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filterHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/txt_filter_shape"
            android:fontFamily="@font/bold"
            android:padding="10dp"
            android:text="@string/pHigh"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/filterMedium"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/allNotes"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvAllNotes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allNotes" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/background"
            android:clickable="true"
            android:src="@drawable/add_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>